--- a/Class1/Zajecia1_Python_Jupyter_ML_Intro.ipynb
+++ b/Class1/Zajecia1_Python_Jupyter_ML_Intro.ipynb
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "#IPython extended help function\n",
-    "len?"
+    "?len"
    ]
   },
   {
@@ -364,7 +364,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import random"
    ]
   },
   {
