Picture extension fix

--- a/Class1/Class1_Python_Jupyter_ML_Intro.ipynb
+++ b/Class1/Class1_Python_Jupyter_ML_Intro.ipynb
@@ -354,7 +354,7 @@
    "metadata": {},
    "source": [
     "**'Production' ML project lifecycle (from \"ML Engineering\" by Andriy Burkov)**\n",
-    "![](./ML_Project_Cycle.png)"
+    "![](./ML_Project_Cycle.PNG)"
    ]
   },
   {
