--- a/Class5/Class5_Deep_Learning.ipynb
+++ b/Class5/Class5_Deep_Learning.ipynb
@@ -122,7 +122,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install numpy pandas scikit-learn keras plotly pydot"
+    "!pip install numpy pandas scikit-learn tensorflow keras plotly pydot"
    ]
   },
   {
@@ -137,6 +137,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report\n",
     "import keras\n",
+    "import tensorflow\n",
     "from keras.layers import Dense, Flatten, Conv2D, Dropout, MaxPooling2D\n",
     "import plotly.graph_objs as go\n",
     "from plotly import subplots\n",
